--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,8 +2,9 @@
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  background: url("../images/bg.jpg") no-repeat  center center fixed;
+  background-size: cover;
 }
-
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -11,7 +12,6 @@ body {
   padding-right: 15px;
   padding-left: 15px;
 }
-
 /* Custom page header */
 .header {
   padding-bottom: 20px;
@@ -23,14 +23,12 @@ body {
   margin-bottom: 0;
   line-height: 40px;
 }
-
 /* Custom page footer */
 .footer {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
 }
-
 /* Customize container */
 @media (min-width: 768px) {
   .container {
@@ -40,20 +38,15 @@ body {
 .container-narrow > hr {
   margin: 30px 0;
 }
-
 /* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
   border-bottom: 1px solid #e5e5e5;
-  max-width: 80%;
-  margin-left: auto;
-  margin-right: auto;
 }
 .jumbotron .btn {
   padding: 14px 24px;
-  font-size: 24px;
+  font-size: 21px;
 }
-
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
@@ -61,7 +54,6 @@ body {
 .marketing p + h4 {
   margin-top: 28px;
 }
-
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
@@ -79,4 +71,51 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+.join-btn {
+  margin-top: 10px;
+}
+.index-container {
+  background-color: rgba(140, 140, 140, 0.3);
+  color:#fff;
+}
+.btn-small {
+  font-size: 17px !important;
+  padding: 6px 35px !important;
+}
+.btn-blue {
+  border: none;
+  color: #fff;
+  background-color: #3498db;
+}
+.btn-blue:hover, .btn-blue:focus {
+  color: #3498db !important;
+  background-color: #fff !important;
+}
+.nav-blue li a {
+    color: #3498db;
+}
+.nav-blue li.active a {
+  background-color: #3498db;
+  color: #fff;
+}
+.nav-blue li.active a:hover {
+  background-color: #fff;
+  color: #3498db;
+}
+h3.text-muted, .footer p {
+  color: #fff;
+}
+.bottom-margin {
+  margin-bottom: 10px;
+}
+.align-left {
+  text-align: left;
+}
+.form-group {
+  text-align: left;
+}
+.list-group-red .list-group-item:hover, .list-group-red .list-group-item.disabled {
+    background-color: #4d0026;
+    color: #fff;
 }
