--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,56 +1,24 @@
-<div class="jumbotron">
-    <h1>Login</h1>
-    <p class="lead">Login to play the best game of your life</p>
-    
-    <div class="row">
-	    <form name="loginForm" 
-			class="form-horizontal col-lg-6">
-			<fieldset>
-				<div class="form-group">
-					<label for="email" class="col-lg-2 control-label">Email</label>
-					<div class="col-lg-6">
-						<input type="text" 
-							class="form-control" 
-							id="email"
-							name="email"
-							placeholder="Email"
-						/>
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="password" 
-						class="col-lg-2 control-label">
-						Password
-					</label>
-					<div class="col-lg-6">
-						<input type="password" 
-							class="form-control" 
-							id="password"
-							name="password"
-							placeholder="Password"
-						/>
-					</div>
-				</div>
-				
-				<!-- didnt add text-center class here so you can see the diff -->
-				<div class="form-group">
-					<div class="col-lg-6 col-lg-offset-2">
-						<button type="submit" 
-							class="btn btn-info">
-							Login
-						</button>
-					</div>
-				</div>
-				
-				<div class="form-group">
-					<div class="col-lg-6 col-lg-offset-2 text-center">
-						<button type="submit" 
-							class="btn btn-info">
-							Register
-						</button>
-					</div>
-				</div>
-			</fieldset>
+<div class="jumbotron index-container">
+	<h1>Welcome to Undefined</h1>
+	<p class="lead">Welcoming text here</p>
+	<div class="form-container">
+		<form method="post" action="/auth/login">
+			<input type="hidden" name="_token" value="{{ csrf_token() }}">
+			<div class="form-group">
+				<label for="exampleInputEmail1">Email address</label>
+				<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" name="email">
+			</div>
+			<div class="form-group">
+				<label for="exampleInputPassword1">Password</label>
+				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+			</div>
+			<div class="checkbox">
+				<label>
+					<input type="checkbox"> Remember me
+				</label>
+			</div>
+			<button type="submit" class="btn btn-default btn-blue">Log In</button>
 		</form>
 	</div>
+	<p class="join-btn"><a class="btn btn-lg btn-success btn-blue" href="#/register" role="button">Join</a></p>
 </div>
