--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,104 +1,49 @@
-<form name="registerForm" 
-	class="form-horizontal col-lg-6">
-	<fieldset>
-		<legend>Register</legend>
-		<div class="form-group">
-			<label for="email" class="col-lg-2 control-label">Email</label>
-			<div class="col-lg-6">
-				<input type="text" 
-					class="form-control" 
-					id="email"
-					name="email"
-					placeholder="Email"
-				/>
-			</div>
-		</div>
-		
-		<div class="form-group">
-			<label for="username" class="col-lg-2 control-label">Email</label>
-			<div class="col-lg-6">
-				<input type="text" 
-					class="form-control" 
-					id="username"
-					name="username"
-					placeholder="Username"
-				/>
-			</div>
-		</div>
-		
-		<div class="form-group">
-			<label for="password" 
-				class="col-lg-2 control-label">
-				Password
-			</label>
-			<div class="col-lg-6">
-				<input type="password" 
-					class="form-control" 
-					id="password"
-					name="password"
-					placeholder="Password"
-				/>
-			</div>
-		</div>
-		
-		<div class="form-group">
-			<label for="passwordConfirm" 
-				class="col-lg-2 control-label">
-				Confirm Password
-			</label>
-			<div class="col-lg-6">
-				<input type="password" 
-					class="form-control" 
-					id="passwordConfirm"
-					name="passwordConfirm"
-					placeholder="Confirm Password"
-				/>
-			</div>
-		</div>
-		
-		<div class="form-group">
-			<label for="photo" 
-				class="col-lg-2 control-label">
-				Photo
-			</label>
-			<div class="col-lg-6">
-				<input type="file" 
-					class="form-control" 
-					id="photo"
-					name="photo"
-					placeholder="Photo"
-				/>
-			</div>
-		</div>
-		
-		<br>
-		
-		<div class="form-group">
-			<div class="col-lg-6 col-lg-offset-2 text-center social-buttons">
-				<button type="submit" 
-					class="btn btn-info">
-					T
-				</button>
+<div class="jumbotron index-container">
+	<h1>Join Undefined</h1>
+	<div class="form-container">
+		<form method="post">
+			<input type="hidden" name="_token" value="{{ csrf_token() }}">
+			<div class="form-group">
+				<label for="email1">Email address</label>
+				<input type="email" class="form-control" id="email1" name="email" placeholder="Email" />
 				
-				<button type="submit" 
-					class="btn btn-info">
-					F
-				</button>
-				
-				<button type="submit" 
-					class="btn btn-info">
-					G
-				</button>
+				<!-- <span>error here</span> -->
 			</div>
-		</div>
-		
-		<div class="form-group">
-			<div class="col-lg-6 col-lg-offset-2 text-center">
-				<button type="submit" 
-					class="btn btn-info">
-					Register
-				</button>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input type="password" class="form-control" id="password" name="password" placeholder="Password">
 			</div>
-		</div>
-	</fieldset>
-</form>
+			<div class="form-group">
+				<label for="password-confirm">Confirm Password</label>
+				<input type="password" class="form-control" id="password-confirm" name="password_confirmation" placeholder="Confirm Password">
+			</div>
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input type="text" class="form-control" id="username" name="username" placeholder="Username" />
+			</div>
+			<div class="form-group">
+				<label for="gender">Gender</label>
+				<select id="gender" class="form-control" name="gender">
+					<option value="other" selected="selected"> - Gender - </option>
+					<option value="male">Male</option>
+					<option value="female">Female</option>
+					<option value="other">Other</option>
+				</select>
+			</div>
+			
+			<div class="form-group">
+				<label for="location">Location</label>
+				<input type="text" class="form-control" id="location" name="location" placeholder="Location" />
+			</div>
+			
+			<!-- <label for="basic-url">Profile photo URL</label> -->
+			
+			<!-- <div class="input-group bottom-margin">
+				<span class="input-group-addon" id="basic-addon3">Add your profile photo</span>
+				<input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" name="profile_photo" />
+			</div> -->
+			
+			<button type="submit" class="btn btn-default btn-blue">Join Undefined!</button>
+		</form>
+	</div>
+</div>
