--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,49 +1,101 @@
 <div class="jumbotron index-container">
 	<h1>Join Undefined</h1>
 	<div class="form-container">
-		<form method="post">
-			<input type="hidden" name="_token" value="{{ csrf_token() }}">
-			<div class="form-group">
-				<label for="email1">Email address</label>
-				<input type="email" class="form-control" id="email1" name="email" placeholder="Email" />
-				
-				<!-- <span>error here</span> -->
+		<form ng-submit="registerNewUser(registerUserForm)" 
+			name="registerUserForm" novalidate>
+			<!-- <input type="hidden" name="_token" value="{{ csrf_token() }}"> -->
+			<div class="form-group"
+				ng-class="{'has-error' : registerUserForm.email.$invalid}">
+				<label for="email">Email address</label>
+				<input type="email" 
+					class="form-control" 
+					id="email" 
+					name="email" 
+					placeholder="Email" 
+					ng-model="newUser.email"
+					required
+					autocomplete="off" 
+				/>
+				<span ng-show="registerUserForm.email.$dirty && registerUserForm.email.$error.required" class="help-block">Email is required!</span>
+				<span ng-show="registerUserForm.email.$dirty && registerUserForm.email.$error.email"
+					class="help-block">
+					Please enter a valid email
+				</span>
 			</div>
-			<div class="form-group">
-				<label for="password">Password</label>
-				<input type="password" class="form-control" id="password" name="password" placeholder="Password">
-			</div>
-			<div class="form-group">
-				<label for="password-confirm">Confirm Password</label>
-				<input type="password" class="form-control" id="password-confirm" name="password_confirmation" placeholder="Confirm Password">
-			</div>
-			<div class="form-group">
+			
+			<div class="form-group"
+				ng-class="{'has-error' : registerUserForm.username.$invalid && formSubmitted}">
 				<label for="username">Username</label>
-				<input type="text" class="form-control" id="username" name="username" placeholder="Username" />
+				<input type="text" 
+					class="form-control" 
+					id="username" 
+					name="username" 
+					placeholder="Username" 
+					ng-model="newUser.username"
+					required
+					ng-minlength="4"
+					autocomplete="off" 
+				/>
+				<span ng-show="registerUserForm.username.$dirty && registerUserForm.username.$error.required" class="help-block">Username is required!</span>
+				<span ng-show="registerUserForm.username.$dirty && registerUserForm.username.$error.minlength"
+					class="help-block">
+					Username must be at least 4 characters long
+				</span>
 			</div>
-			<div class="form-group">
-				<label for="gender">Gender</label>
-				<select id="gender" class="form-control" name="gender">
-					<option value="other" selected="selected"> - Gender - </option>
-					<option value="male">Male</option>
-					<option value="female">Female</option>
-					<option value="other">Other</option>
-				</select>
+			
+			<div class="form-group"
+				ng-class="{'has-error' : registerUserForm.password.$invalid && formSubmitted}">
+				<label for="password">Password</label>
+				<input type="password" 
+					class="form-control" 
+					id="password" 
+					name="password" 
+					placeholder="Password"
+					ng-model="newUser.password"
+					ng-minlength="6"
+					required
+					autocomplete="off"
+				/>
+				<span ng-show="registerUserForm.password.$dirty && registerUserForm.password.$error.required" class="help-block">Password is required!</span>
+				<span ng-show="registerUserForm.password.$dirty && registerUserForm.password.$error.minlength"
+					class="help-block">
+					Password must be at least 6 characters long
+				</span>
 			</div>
+			
+			<!-- <div class="form-group">
+				<label for="password-confirm">Confirm Password</label>
+				<input type="password" 
+					class="form-control" 
+					id="password-confirm" 
+					name="password_confirmation" 
+					placeholder="Confirm Password" 
+					ng-model="newUser.passwordConfirm"
+					required
+				/>
+			</div> -->
 			
 			<div class="form-group">
 				<label for="location">Location</label>
-				<input type="text" class="form-control" id="location" name="location" placeholder="Location" />
+				<input type="text" 
+					class="form-control" 
+					id="location" 
+					name="location" 
+					placeholder="Location" 
+					ng-model="newUser.location"
+					required
+					autocomplete="off"
+				/>
+				<span ng-show="registerUserForm.location.$dirty && registerUserForm.location.$error.required" class="help-block">Location is required!</span>
 			</div>
 			
-			<!-- <label for="basic-url">Profile photo URL</label> -->
-			
-			<!-- <div class="input-group bottom-margin">
-				<span class="input-group-addon" id="basic-addon3">Add your profile photo</span>
-				<input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3" name="profile_photo" />
-			</div> -->
-			
-			<button type="submit" class="btn btn-default btn-blue">Join Undefined!</button>
+			<button 
+				type="submit" 
+				class="btn btn-default btn-blue"
+				
+				>
+				Join Undefined!
+			</button>
 		</form>
 	</div>
 </div>
