--- a/public/css/app.css
+++ b/public/css/app.css
@@ -123,3 +123,12 @@ h3.text-muted, .footer p {
 span.help-block {
   color: #cecece !important;
 }
+
+span.separate-nav-buttons {
+  width: 20px;
+  display: inline-block;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
