--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,23 +1,42 @@
+<div class="header clearfix">
+       
+</div>
+
 <div class="jumbotron index-container">
 	<h1>Welcome to Undefined</h1>
 	<p class="lead">Welcoming text here</p>
 	<div class="form-container">
-		<form method="post" action="/auth/login">
-			<input type="hidden" name="_token" value="{{ csrf_token() }}">
+		<form name="loginForm" 
+			ng-submit="doLogin(loginForm)">
+			
 			<div class="form-group">
-				<label for="exampleInputEmail1">Email address</label>
-				<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email" name="email">
+				<label for="email">Email address</label>
+				<input type="email" 
+					class="form-control" 
+					id="email" 
+					placeholder="Email" 
+					name="email"
+					ng-model="login.email"
+					required
+				/>
 			</div>
 			<div class="form-group">
-				<label for="exampleInputPassword1">Password</label>
-				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password">
+				<label for="password">Password</label>
+				<input type="password" 
+					class="form-control" 
+					id="password" 
+					placeholder="Password" 
+					name="password"
+					ng-model="login.password"
+					required
+				/>
 			</div>
-			<div class="checkbox">
-				<label>
-					<input type="checkbox"> Remember me
-				</label>
-			</div>
-			<button type="submit" class="btn btn-default btn-blue">Log In</button>
+			
+			<button type="submit" 
+				class="btn btn-default btn-blue"
+				name="loginButton">
+				Log In
+			</button>
 		</form>
 	</div>
 	<p class="join-btn"><a class="btn btn-lg btn-success btn-blue" href="#/register" role="button">Join</a></p>
