--- a/public/css/app.css
+++ b/public/css/app.css
@@ -124,11 +124,6 @@ span.help-block {
   color: #cecece !important;
 }
 
-span.separate-nav-buttons {
-  width: 20px;
-  display: inline-block;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+.left-float-button{
+  margin-right: 60px;
 }
