--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,20 +1,24 @@
+<div class="header clearfix">
+
+</div>
+
 <div class="jumbotron index-container">
 	<h1>Join Undefined</h1>
 	<div class="form-container">
-		<form ng-submit="registerNewUser(registerUserForm)" 
+		<form ng-submit="registerNewUser(registerUserForm)"
 			name="registerUserForm" novalidate>
 			<!-- <input type="hidden" name="_token" value="{{ csrf_token() }}"> -->
 			<div class="form-group"
 				ng-class="{'has-error' : registerUserForm.email.$invalid}">
 				<label for="email">Email address</label>
-				<input type="email" 
-					class="form-control" 
-					id="email" 
-					name="email" 
-					placeholder="Email" 
+				<input type="email"
+					class="form-control"
+					id="email"
+					name="email"
+					placeholder="Email"
 					ng-model="newUser.email"
 					required
-					autocomplete="off" 
+					autocomplete="off"
 				/>
 				<span ng-show="registerUserForm.email.$dirty && registerUserForm.email.$error.required" class="help-block">Email is required!</span>
 				<span ng-show="registerUserForm.email.$dirty && registerUserForm.email.$error.email"
@@ -22,19 +26,19 @@
 					Please enter a valid email
 				</span>
 			</div>
-			
+
 			<div class="form-group"
 				ng-class="{'has-error' : registerUserForm.username.$invalid && formSubmitted}">
 				<label for="username">Username</label>
-				<input type="text" 
-					class="form-control" 
-					id="username" 
-					name="username" 
-					placeholder="Username" 
+				<input type="text"
+					class="form-control"
+					id="username"
+					name="username"
+					placeholder="Username"
 					ng-model="newUser.username"
 					required
 					ng-minlength="4"
-					autocomplete="off" 
+					autocomplete="off"
 				/>
 				<span ng-show="registerUserForm.username.$dirty && registerUserForm.username.$error.required" class="help-block">Username is required!</span>
 				<span ng-show="registerUserForm.username.$dirty && registerUserForm.username.$error.minlength"
@@ -42,14 +46,14 @@
 					Username must be at least 4 characters long
 				</span>
 			</div>
-			
+
 			<div class="form-group"
 				ng-class="{'has-error' : registerUserForm.password.$invalid && formSubmitted}">
 				<label for="password">Password</label>
-				<input type="password" 
-					class="form-control" 
-					id="password" 
-					name="password" 
+				<input type="password"
+					class="form-control"
+					id="password"
+					name="password"
 					placeholder="Password"
 					ng-model="newUser.password"
 					ng-minlength="6"
@@ -62,37 +66,37 @@
 					Password must be at least 6 characters long
 				</span>
 			</div>
-			
+
 			<!-- <div class="form-group">
 				<label for="password-confirm">Confirm Password</label>
-				<input type="password" 
-					class="form-control" 
-					id="password-confirm" 
-					name="password_confirmation" 
-					placeholder="Confirm Password" 
+				<input type="password"
+					class="form-control"
+					id="password-confirm"
+					name="password_confirmation"
+					placeholder="Confirm Password"
 					ng-model="newUser.passwordConfirm"
 					required
 				/>
 			</div> -->
-			
+
 			<div class="form-group">
 				<label for="location">Location</label>
-				<input type="text" 
-					class="form-control" 
-					id="location" 
-					name="location" 
-					placeholder="Location" 
+				<input type="text"
+					class="form-control"
+					id="location"
+					name="location"
+					placeholder="Location"
 					ng-model="newUser.location"
 					required
 					autocomplete="off"
 				/>
 				<span ng-show="registerUserForm.location.$dirty && registerUserForm.location.$error.required" class="help-block">Location is required!</span>
 			</div>
-			
-			<button 
-				type="submit" 
+
+			<button
+				type="submit"
 				class="btn btn-default btn-blue"
-				
+
 				>
 				Join Undefined!
 			</button>
