--- a/public/views/login.html
+++ b/public/views/login.html
@@ -92,12 +92,12 @@
 </div>
 
 <div class="header clearfix">
-
+    
 </div>
 
 <div class="jumbotron index-container">
-	<h1>Welcome to Undefined</h1>
-	<p class="lead">Welcoming text here</p>
+	<h1>Welcome to Samaritans</h1>
+	<p class="lead">Please login to view our amazing game</p>
 	<div class="form-container">
 		<form name="loginForm"
 			ng-submit="doLogin(loginForm)">
