--- a/public/views/register.html
+++ b/public/views/register.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="jumbotron index-container">
-	<h1>Join Undefined</h1>
+	<h1>Join Samaritans</h1>
 	<div class="form-container">
 		<form ng-submit="registerNewUser(registerUserForm)"
 			name="registerUserForm" novalidate>
@@ -98,7 +98,7 @@
 				class="btn btn-default btn-blue"
 
 				>
-				Join Undefined!
+				Join Samaritans!
 			</button>
 		</form>
 	</div>
