--- a/public/views/login.html
+++ b/public/views/login.html
@@ -79,6 +79,12 @@
   }
 </script>
 
+<script>
+    function onSuccess(googleUser) {
+      console.log('Signed in as: ' + googleUser.getBasicProfile().getName());
+    }
+</script>
+
 <div class="header clearfix">
 
 </div>
@@ -133,5 +139,27 @@
 <div id="status">
 </div>
 
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
+  <script>
+    function onSuccess(googleUser) {
+      console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+    }
+    function onFailure(error) {
+      console.log(error);
+    }
+    function renderButton() {
+      gapi.signin2.render('my-signin2', {
+        'scope': 'profile email',
+        'width': 240,
+        'height': 50,
+        'longtitle': true,
+        'theme': 'dark',
+        'onsuccess': onSuccess,
+        'onfailure': onFailure
+      });
+    }
+  </script>
+
+  <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 
 </div>
