Add another google login fix

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -132,16 +132,9 @@
 <div id="status">
 </div>
 
-<!--
-  Google Login Button
--->
-<script>
-    function onSuccess(googleUser) {
-      console.log('Signed in as: ' + googleUser.getBasicProfile().getName());
-    }
-  }
-</script>
+<!-- Add Google login button -->
 
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
+
 
 </div>
