Add shop privew

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -137,3 +137,11 @@ span.help-block {
 .make-active {
   font-weight: bold;
 }
+
+.shop-header-margin {
+  padding-bottom: 40px;
+}
+
+.shop-items-container {
+  width: 80%;
+}
