--- a/public/views/game.html
+++ b/public/views/game.html
@@ -2,4 +2,62 @@
 	<div ng-include="global.navUrl"></div>
 </div>
 
-<p>the game will reside in this window someday, probably never</p>
+<div class="jumbotron index-container" style="background-color: rgba(12, 10, 38, 0.9);">
+    <canvas id="samaritans_game" width="600" height="600"></canvas>
+</div>
+
+<!--CREATEJS-->
+<script src="/scripts/game/lib/easeljs-0.7.1.min.js"></script>
+<script src="/scripts/game/lib/soundjs-0.5.2.min.js"></script>
+<script src="/scripts/game/lib/preloadjs-0.4.1.min.js"></script>
+<script src="/scripts/game/lib/tweenjs-0.5.1.min.js"></script>
+<script src="/scripts/game/lib/BitmapText.js"></script>
+
+<!--NDGMR-->
+<script src="/scripts/game/lib/ndgmr.Collision.sprite.js"></script>
+
+<!--GAME CLASSES-->
+<script src="/scripts/game/state.js"></script>
+<script src="/scripts/game/utils/Utils.js"></script>
+
+<!--COMPONENTS-->
+<script src="/scripts/game/classes/components/Preloader.js"></script>
+<script src="/scripts/game/classes/components/SimpleButton.js"></script>
+
+<!--SCENES-->
+<script src="/scripts/game/scenes/GameMenu.js"></script>
+<script src="/scripts/game/scenes/Game.js"></script>
+<script src="/scripts/game/scenes/GameOver.js"></script>
+
+<!--MANAGERS-->
+<script src="/scripts/game/classes/managers/AssetManager.js"></script>
+<script src="/scripts/game/classes/managers/SpritePool.js"></script>
+
+<!--SPRITES-->
+<script src="/scripts/game/classes/sprites/Explosion.js"></script>
+<script src="/scripts/game/classes/sprites/HealthMeter.js"></script>
+<script src="/scripts/game/classes/sprites/LifeBox.js"></script>
+<script src="/scripts/game/classes/sprites/Scoreboard.js"></script>
+<script src="/scripts/game/classes/sprites/EnemyShip.js"></script>
+<script src="/scripts/game/classes/sprites/HeroShip.js"></script>
+<script src="/scripts/game/classes/sprites/Bullet.js"></script>
+
+<!--APPLICATION-->
+<script src="/scripts/game/Samaritans.js"></script>
+
+<script>
+    var ARROW_KEY_SPACE = 32;
+    var ARROW_KEY_UP = 38;
+    var ARROW_KEY_DOWN = 40;
+    var ARROW_KEY_LEFT = 37;
+    var ARROW_KEY_RIGHT = 39;
+
+    var stage;
+    var canvas;
+    var spritesheet;
+    var screen_width;
+    var screen_height;
+
+    window.game = window.game || {};
+    game.main = new game.Samaritans();
+</script>
