added dynamic highscore table generated with angular

--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -2,4 +2,19 @@
 	<div ng-include="global.navUrl"></div>
 </div>
 
-<p>this is dashboard</p>
+<h1>Samaritans in Space</h1>
+
+<br />
+
+<p class="text-justify">
+  Това е проект, направен с няколко Web технологии, който включва система позволяваща регистриране и съответно влизане в личен акаунт и след това дава достъп до игра наречена 'Samaritans in Space', в която целта е да унищожим колкото се може повече вражески космически кораби.
+</p>
+
+<p>
+  Използваните Web технологии са:
+  <ul>
+    <li>AngularJS v1.5.3</li>
+    <li>Laravel v5.2</li>
+    <li>EaselJS</li>
+  </ul>
+</p>
