--- a/public/views/nav.html
+++ b/public/views/nav.html
@@ -11,7 +11,7 @@
             <li ng-repeat="link in navUrl"
                 role="presentation">
                 <a href="#{{ link.url }}"
-                    ng-class="checkActiveLink(link.url)" 
+                    ng-class="checkActiveLink(link.url)"
                     >
                     {{ link.name }}
                 </a>
@@ -23,7 +23,7 @@
 
 	    	<li role="presentation"
 	        	class="pull-right">
-	        	<a href="javascript:void(0)" ng-click="doLogout()">Logout</a>
+	        	<a href="javascript:void(0)" ng-click="doLogout()">Излез</a>
 	    	</li>
 
 	        <li role="presentation"
