--- a/public/css/app.css
+++ b/public/css/app.css
@@ -101,6 +101,10 @@ body {
     color: #fff;
 }
 
+.nav-white li a:hover {
+  color: #000;
+}
+
 .nav-blue li.active a {
   background-color: #3498db;
   color: #fff;
@@ -109,6 +113,11 @@ body {
   background-color: #fff;
   color: #3498db;
 }
+
+h3.text-muted {
+  margin-right: 10px;
+}
+
 h3.text-muted, .footer p {
   color: #fff;
 }
@@ -130,7 +139,7 @@ span.help-block {
   color: #cecece !important;
 }
 
-.left-float-button{
+.left-float-button {
   margin-right: 60px;
 }
 
@@ -144,4 +153,16 @@ span.help-block {
 
 .shop-items-container {
   width: 80%;
+}
+
+.table.highscore thead tr > th {
+  text-align: center;
+}
+
+.table.highscore tbody tr:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.subtitle-text {
+  font-size: 0.8em;
 }
