--- a/public/views/shop.html
+++ b/public/views/shop.html
@@ -3,74 +3,74 @@
 </div>
 
 <div id="shop-items-container" class="jumbotron index-container">
-    <h1>Samaritan Shop</h1>
+  <h1>Магазин</h1>
 
-    <!-- Must fix! -->
+  <!-- Must fix! -->
 
-    <br>
-    <br>
+  <br>
+  <br>
 
-    <div class="row">
-      <div class="col-sm-3 col-md-4">
-        <div class="thumbnail">
-            <img src="images/shop_item_preview.png" alt="...">
-            <div class="caption">
-            <h3>Item 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
-            <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3 col-md-4">
-        <div class="thumbnail">
-            <img src="images/shop_item_preview.png" alt="...">
-            <div class="caption">
-            <h3>Item 2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
-            <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3 col-md-4">
-        <div class="thumbnail">
-            <img src="images/shop_item_preview.png" alt="...">
-            <div class="caption">
-            <h3>Item 3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
-            <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3 col-md-4">
-        <div class="thumbnail">
-            <img src="images/shop_item_preview.png" alt="...">
-            <div class="caption">
-            <h3>Item 4</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
-            <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3 col-md-4">
-        <div class="thumbnail">
-            <img src="images/shop_item_preview.png" alt="...">
-            <div class="caption">
-            <h3>Item 5</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
-            <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3 col-md-4">
-        <div class="thumbnail">
-            <img src="images/shop_item_preview.png" alt="...">
-            <div class="caption">
-            <h3>Item 6</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
-            <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
-          </div>
+  <div class="row">
+    <div class="col-sm-3 col-md-4">
+      <div class="thumbnail">
+          <img src="images/shop_item_preview.png" alt="...">
+          <div class="caption">
+          <h3>Item 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
+          <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
         </div>
       </div>
     </div>
-
+    <div class="col-sm-3 col-md-4">
+      <div class="thumbnail">
+          <img src="images/shop_item_preview.png" alt="...">
+          <div class="caption">
+          <h3>Item 2</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
+          <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
+        </div>
+      </div>
     </div>
+    <div class="col-sm-3 col-md-4">
+      <div class="thumbnail">
+          <img src="images/shop_item_preview.png" alt="...">
+          <div class="caption">
+          <h3>Item 3</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
+          <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-4">
+      <div class="thumbnail">
+          <img src="images/shop_item_preview.png" alt="...">
+          <div class="caption">
+          <h3>Item 4</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
+          <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-4">
+      <div class="thumbnail">
+          <img src="images/shop_item_preview.png" alt="...">
+          <div class="caption">
+          <h3>Item 5</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
+          <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-3 col-md-4">
+      <div class="thumbnail">
+          <img src="images/shop_item_preview.png" alt="...">
+          <div class="caption">
+          <h3>Item 6</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ...</p>
+          <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
