--- a/public/views/register.html
+++ b/public/views/register.html
@@ -37,7 +37,6 @@
 					placeholder="Име"
 					ng-model="newUser.username"
 					required
-					ng-minlength="4"
 					autocomplete="off"
 				/>
 				<!-- <span ng-show="addUserForm.username.$dirty && addUserForm.username.$error.required" class="help-block">Username is required!</span>
@@ -61,25 +60,14 @@
 					required
 					autocomplete="off"
 				/>
-				<!-- <span ng-show="addUserForm.password.$dirty && addUserForm.password.$error.required" class="help-block">Password is required!</span>
+				<!-- <span ng-show="addUserForm.password.$dirty && addUserForm.password.$error.required" class="help-block">Паролата е задължителна.</span> -->
+				<span ng-show="addUserForm.password.$invalid && formSubmitted" class="help-block">Паролата е задължителна.</span>
 				<span ng-show="addUserForm.password.$dirty && addUserForm.password.$error.minlength"
 					class="help-block">
-					Password must be at least 6 characters long
-				</span> -->
-				<span ng-show="addUserForm.password.$invalid && formSubmitted" class="help-block">Паролата е задължителна</span>
+					<!-- Password must be at least 6 characters long -->
+					Паролата трябва да бъде с дължина от поне 6 символа.
+				</span>
 			</div>
-
-			<!-- <div class="form-group">
-				<label for="password-confirm">Confirm Password</label>
-				<input type="password"
-					class="form-control"
-					id="password-confirm"
-					name="password_confirmation"
-					placeholder="Confirm Password"
-					ng-model="newUser.passwordConfirm"
-					required
-				/>
-			</div> -->
 
 			<div class="form-group">
 				<label for="location">Държава</label>
@@ -93,7 +81,7 @@
 					autocomplete="off"
 				/>
 				<!-- <span ng-show="addUserForm.location.$dirty && addUserForm.location.$error.required" class="help-block">Location is required!</span> -->
-				<span ng-show="addUserForm.location.$invalid && formSubmitted" class="help-block">Държавата е задължителна</span>
+				<span ng-show="addUserForm.location.$invalid && formSubmitted" class="help-block">Местоположението е задължително.</span>
 			</div>
 
 			<button class="btn btn-success" role="button">
